// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCardBody customize 1`] = `
<div>
  <div
    class="card-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxCardBody component 1`] = `
<div>
  <div
    class="card-body"
  >
    Test
  </div>
</div>
`;
